cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_11.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/idea/i_cbc.c:73: error: DEAD_STORE
  The value written to &in (type unsigned char const *) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/idea/i_cbc.c:73:13: Write of unused value
71.               n2l(in, tin0);
72.               tin[0] = tin0;
73.               n2l(in, tin1);
                  ^
74.               tin[1] = tin1;
75.               IDEA_encrypt(tin, ks);
